--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,19 +18,14 @@
   <body>
     <div class="wrapper-masthead">
       <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
-
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+          <nav class="nav-collapse">
+              <ul>
+                  <li><a href="{{ site.baseurl }}">Home</a></li>
+                  <li><a href="{{ site.baseurl }}">About</a></li>
+                  <li><a href="{{ site.baseurl }}">Projects</a></li>
+                  <li><a href="{{ site.baseurl }}/kontakt">Contact!</a></li>
+              </ul>
           </nav>
-        </header>
       </div>
     </div>
 
@@ -47,5 +42,8 @@
     </div>
 
     {% include analytics.html %}
+    <script src="scripts/responsive-nav.min.js"></script>
+    <script src="scripts/main.js"></script>
+
   </body>
 </html>
