--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,6 +14,11 @@ $gray: #666;
 $lightGray: #eee;
 $white: #fff;
 
+$green-sea: #16a085;
+$turquoise: #1abc9c;
+$emerald: #2ecc71;
+
+
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
