--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,8 @@
     </div>
 
     {% include analytics.html %}
-    <script src="scripts/responsive-nav.min.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="{{ site.baseurl }}/scripts/responsive-nav.min.js"></script>
+    <script src="{{ site.baseurl }}/scripts/main.js"></script>
 
   </body>
 </html>
