--- a/style.scss
+++ b/style.scss
@@ -10,9 +10,9 @@
 @import "responsive-nav";
 // Syntax highlighting @import is at the bottom of this file
 
-/**************/
-/* BASE RULES */
-/**************/
+body {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
 
 .logo {
   text-align: center;
