--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,18 +16,19 @@
   </head>
 
   <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-          <nav class="nav-collapse">
-              <ul>
-                  <li><a href="{{ site.baseurl }}">Home</a></li>
-                  <li><a href="{{ site.baseurl }}">About</a></li>
-                  <li><a href="{{ site.baseurl }}">Projects</a></li>
-                  <li><a href="{{ site.baseurl }}/kontakt">Contact!</a></li>
-              </ul>
-          </nav>
-      </div>
-    </div>
+    <!--[if lt IE 8]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+
+    <div class="logo">syson.</div>
+    <nav class="nav-collapse">
+      <ul>
+          <li><a href="{{ site.baseurl }}/">Home</a></li>
+          <li><a href="{{ site.baseurl }}/">About</a></li>
+          <li><a href="{{ site.baseurl }}/">Projects</a></li>
+          <li><a href="{{ site.baseurl }}/kontakt">Contact!</a></li>
+      </ul>
+    </nav>
 
     <div id="main" role="main" class="container">
       {{ content }}
