--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,16 +30,8 @@
       </ul>
     </nav>
 
-    <div id="main" role="main" class="container">
+    <div id="main" role="main">
       {{ content }}
-    </div>
-
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
-      </div>
     </div>
 
     {% include analytics.html %}
