--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,10 @@ body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
+img {
+  width: 100%;
+}
+
 .logo {
   text-align: center;
   color: $green-sea;
