--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@
 @import "reset";
 @import "variables";
 @import "responsive-nav";
+@import 'jeet/jeet';
 // Syntax highlighting @import is at the bottom of this file
 
 body {
