--- a/style.scss
+++ b/style.scss
@@ -48,7 +48,11 @@ img {
 }
 
 .team_member {
-  @include j-column(1/3);
+  @include j-column(1/3, $cycle: 3);
+}
+
+.post {
+  @include j-column(1/3, $cycle: 3);
 }
 
 
