--- a/style.scss
+++ b/style.scss
@@ -55,6 +55,10 @@ img {
   @include j-column(1/3, $cycle: 3);
 }
 
+.instagram_post {
+  @include j-column(1/4, $cycle: 4);
+}
+
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
