--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,13 @@
 
 // Syntax highlighting @import is at the bottom of this file
 
+/* Uncomment the row below to help you when developing the site.
+"Edit mode assigns a light gray, semi-transparent, background to every element on the page.
+It's a little trick picked up over the years that makes visualizing the structure of your site trivial."
+*/
+//@include j-edit();
+
+
 body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
@@ -38,36 +45,44 @@ img {
   overflow: hidden;
   display: none;
   background: $green-sea url("../images/hamburger.gif") no-repeat 50% 33%;
-  @include mobile {
+  @include desktop {
     display: block;
   }
 }
 
 .container {
-  @include j-center(960px)
+  @include j-center(null, percentage($jeet-gutter/100));
+
+  @include desktop {
+    @include j-center(960px);
+  }
 }
 
 .team_member {
-  @include j-column(1/3, $cycle: 3);
+  @include j-column(1/1);
 
-  @include mobile {
-    @include j-column(1/1);
+  @include desktop {
+    @include j-column(1/3, $cycle: 3);
+  }
+
+  img {
+    border-radius: 50%;
   }
 }
 
 .post {
-  @include j-column(1/3, $cycle: 3);
+  @include j-column(1/1);
 
-  @include mobile {
-    @include j-column(1/1);
+  @include desktop {
+    @include j-column(1/3, $cycle: 3);
   }
 }
 
 .instagram_post {
-  @include j-column(1/4, $cycle: 4);
+  @include j-column(1/2, $cycle: 2);
 
-  @include mobile {
-    @include j-column(1/2, $cycle: 2);
+  @include desktop {
+    @include j-column(1/4, $cycle: 4);
   }
 }
 
