--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ img {
 
 .logo {
   text-align: center;
-  color: $green-sea;
+  color: $turquoise;
   font-size: 37px;
   letter-spacing: 2px;
 }
@@ -44,7 +44,7 @@ img {
   text-indent: -9999px;
   overflow: hidden;
   display: none;
-  background: $green-sea url("../images/hamburger.gif") no-repeat 50% 33%;
+  background: $turquoise url("../images/hamburger.gif") no-repeat 50% 33%;
   @include desktop {
     display: block;
   }
@@ -63,6 +63,10 @@ img {
 
   @include desktop {
     @include j-column(1/3, $cycle: 3);
+  }
+
+  .button {
+    @include j-column(4/6, 1/6);
   }
 
   img {
@@ -85,6 +89,76 @@ img {
     @include j-column(1/4, $cycle: 4);
   }
 }
+
+/* Wayra button from http://tympanus.net/Development/ButtonStylesInspiration/*/
+
+.button {
+  float: left;
+  min-width: 150px;
+  display: block;
+  margin: 1em;
+  padding: 1em 2em;
+  border: none;
+  background: none;
+  color: $turquoise;
+  vertical-align: middle;
+  position: relative;
+  z-index: 1;
+  -webkit-backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  border: 3px solid;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: initial;
+}
+
+.button--wayra {
+  overflow: hidden;
+  width: 245px;
+  -webkit-transition: border-color 0.3s, color 0.3s;
+  transition: border-color 0.3s, color 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+.button--wayra::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 150%;
+  height: 100%;
+  background: $turquoise;
+  z-index: -1;
+  -webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
+  transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
+  -webkit-transform-origin: 0% 100%;
+  transform-origin: 0% 100%;
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.3s, background-color 0.3s;
+  transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
+}
+.button--wayra:hover {
+  color: #fff;
+  border-color: $turquoise;
+}
+.button--wayra.button--inverted:hover {
+  color: $turquoise;
+  border-color: #fff;
+}
+.button--wayra:hover::before {
+  opacity: 1;
+  background-color: $turquoise;
+  -webkit-transform: rotate3d(0, 0, 1, 0deg);
+  transform: rotate3d(0, 0, 1, 0deg);
+  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+.button--wayra.button--inverted:hover::before {
+  background-color: #fff;
+}
+
+
 
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
