--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,12 @@ It's a little trick picked up over the years that makes visualizing the structur
 
 body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-size: 20px;
+  line-height: 1.4;
+}
+
+h1 {
+  font-size: 35px;
 }
 
 img {
@@ -65,8 +71,17 @@ img {
     @include j-column(1/3, $cycle: 3);
   }
 
+  .name {
+    text-align: center;
+  }
+
   .button {
     @include j-column(4/6, 1/6);
+  }
+
+  .quote {
+    @include j-column();
+    text-align: center;
   }
 
   img {
