--- a/style.scss
+++ b/style.scss
@@ -67,7 +67,8 @@ img {
 }
 
 .container {
-  @include j-center(null, percentage($jeet-gutter/100));
+  //@include j-center(null, percentage($jeet-gutter/100));
+  @include j-column(22/24, 1/24);
 
   @include desktop {
     @include j-center(960px);
@@ -76,7 +77,7 @@ img {
 
 .team_member {
   margin-bottom: 20px;
-  @include j-column(1/1);
+  @include j-column();
 
   @include desktop {
     @include j-column(1/3, $cycle: 3);
@@ -96,12 +97,13 @@ img {
   }
 
   img {
+    @include j-column();
     border-radius: 50%;
   }
 }
 
 .post {
-  @include j-column(1/1);
+  @include j-column();
 
   @include desktop {
     @include j-column(1/3, $cycle: 3);
