--- a/style.scss
+++ b/style.scss
@@ -111,10 +111,12 @@ img {
 }
 
 .instagram_post {
-  @include j-column(1/2, $cycle: 2);
+  margin-bottom: percentage($jeet-gutter/6/100);
+
+  @include j-column(1/2, $cycle: 2, $gutter: $jeet-gutter/3);
 
   @include desktop {
-    @include j-column(1/4, $cycle: 4);
+    @include j-column(1/3, $cycle: 3, $gutter: $jeet-gutter/3);
   }
 }
 
