--- a/style.scss
+++ b/style.scss
@@ -130,12 +130,12 @@ img {
 }
 
 .instagram_post {
-  margin-bottom: percentage($jeet-gutter/6/100);
+  margin-bottom: percentage($jeet-gutter/100);
 
-  @include j-column(1/2, $cycle: 2, $gutter: $jeet-gutter/3);
+  @include j-column(1/2, $cycle: 2);
 
   @include desktop {
-    @include j-column(1/3, $cycle: 3, $gutter: $jeet-gutter/3);
+    @include j-column(1/3, $cycle: 3);
   }
 }
 
