only show 3 articles by default, create archive-page for showing all

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,9 @@
       </div>
       <nav class="nav-collapse js-slide-toggle">
         <ul>
-            <li class="nav-item"><a href="{{ site.baseurl }}/">Home</a></li>
-            <li class="nav-item"><a href="{{ site.baseurl }}/">About</a></li>
-            <li class="nav-item"><a href="{{ site.baseurl }}/">Projects</a></li>
-            <li class="nav-item"><a href="{{ site.baseurl }}/kontakt">Contact!</a></li>
+            <li class="nav-item"><a href="{{ site.baseurl }}/">Hem</a></li>
+            <li class="nav-item"><a href="{{ site.baseurl }}#kontakt">Kontakt</a></li>
+            <li class="nav-item"><a href="{{ site.baseurl }}/arkiv/">Artikelarkiv</a></li>
         </ul>
       </nav>
     </header>
