--- a/style.scss
+++ b/style.scss
@@ -124,9 +124,22 @@ footer {
     text-align: center;
   }
 
-  img {
-    @include j-column();
-    border-radius: 50%;
+  .image-container {
+    //hack to make the images take up space before they are loaded, see
+    // http://stackoverflow.com/questions/15520623/css-image-layouting-before-image-loaded
+    position:relative;
+    width:100%;
+    height:0;
+    padding-top:100%;
+
+    img {
+      @include j-column();
+      border-radius: 50%;
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+    }
   }
 }
 
