--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,17 @@ h1 {
   font-size: 35px;
 }
 
+hr {
+  @include j-column();
+  border: 0;
+  border-top: 1px solid $clouds;
+}
+
+.divider {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
 img {
   max-width: 100%;
 }
