added social icons in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,9 @@
         </div>
     </div>
     <footer>
+        <div class="social-icons-container">
+            {% include svg-icons.html %}
+        </div>
     </footer>
 
     {% include analytics.html %}
