added contact info to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,16 @@
         </div>
     </div>
     <footer>
-        <div class="social-icons-container">
-            {% include svg-icons.html %}
+        <div class="container">
+            <div class="social-icons-container">
+                {% include svg-icons.html %}
+            </div>
+            <div class="contact-info">
+                <span>Postadress: Hermelinvägen 77, 13433 Gustavsberg</span>
+                <span>Telefon: <a href="tel:0733347999">0733-34 79 99</a></span>
+                <span>E-post: <a href="mailto:kontakt@syson.se">kontakt@syson.se</a></span>
+                <span>Orgnr: 556934-1851</span>
+            </div>
         </div>
     </footer>
 
