--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,14 @@ layout: default
 ---
 
 <article>
-  <h1>{{ page.title }}</h1>
+    <h1 class="center">{{ page.title }}</h1>
 
-  <div class="entry">
-    {{ content }}
-  </div>
+    <p class="center">
+        {% include date.html %}
+    </p>
+
+    <div class="entry">
+        {{ content }}
+    </div>
 
 </article>
