--- a/style.scss
+++ b/style.scss
@@ -48,6 +48,10 @@ a {
   text-decoration: underline;
 }
 
+.center {
+  text-align: center;
+}
+
 .divider {
   margin-top: 100px;
   margin-bottom: 100px;
