--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -7,7 +7,7 @@
         <a href="{{ site.baseurl }}{{ post.url }}"><img src="{{site.baseurl}}/images/{{post.featured_image}}"></a>
         {% endif %}
         {{ post.excerpt | strip_html | truncatewords: 20}}
-        <a href="{{ site.baseurl }}{{ post.url }}" class="underline">Läs Mer</a>
+        <a href="{{ site.baseurl }}{{ post.url }}">Läs Mer</a>
     </div>
 
 </article>
