--- a/style.scss
+++ b/style.scss
@@ -37,10 +37,15 @@ hr {
 }
 
 a {
+  color: #3498db;
   text-decoration: inherit;
 
   &:hover {
     text-decoration: underline;
+  }
+
+  &:visited {
+    color: #3498db;
   }
 }
 
@@ -203,6 +208,12 @@ footer {
   @include desktop {
     @include j-column(1/3, $cycle: 3);
   }
+
+  h1 {
+    a {
+      color: inherit;
+    }
+  }
 }
 
 .instagram-post {
@@ -264,7 +275,7 @@ footer {
   transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
 }
 .button--wayra:hover {
-  color: #fff;
+  color: #fff !important;
   border-color: $turquoise;
 }
 .button--wayra.button--inverted:hover {
@@ -281,6 +292,12 @@ footer {
 }
 .button--wayra.button--inverted:hover::before {
   background-color: #fff;
+}
+a.button.button--wayra:visited {
+  color: $turquoise;
+}
+a.button.button--wayra:hover {
+  text-decoration: inherit;
 }
 
 
