--- a/style.scss
+++ b/style.scss
@@ -202,6 +202,16 @@ footer {
 
 }
 
+.posts {
+  @include j-column();
+
+  .archive-link {
+    @include j-column();
+    text-align: right;
+    margin-top: 20px;
+  }
+}
+
 .post {
   @include j-column();
 
