--- a/style.scss
+++ b/style.scss
@@ -208,12 +208,12 @@ footer {
   .archive-link {
     @include j-column();
     text-align: right;
-    margin-top: 20px;
   }
 }
 
 .post {
   @include j-column();
+  margin-bottom: 40px;
 
   @include desktop {
     @include j-column(1/3, $cycle: 3);
