logo is now a link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <header class="global-header">
       <div class="border"></div>
-      <div class="logo">syson.</div>
+      <div class="logo"><a href="{{ site.baseurl }}/">syson.</a></div>
     </header>
     <div class="container">
         <div id="main" role="main">
