--- a/style.scss
+++ b/style.scss
@@ -111,6 +111,11 @@ footer {
   @include desktop {
     font-size: 100px;
   }
+
+  a {
+    color: inherit;
+    text-decoration: inherit;
+  }
 }
 
 .nav-icon {
