auto-resize iframe

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -5,3 +5,7 @@ layout: default
 <article class="team-page">
     <iframe src="https://docs.google.com/document/d/1BrZ2IVHbpYK3_RyGBc3DO2NXXFVOZQlyH4soHKvVhm8/pub?embedded=true"></iframe>
 </article>
+
+<script src="{{ site.baseurl }}/scripts/iframeResizer.min.js"></script>
+<script>iFrameResize({log:true})</script>
+
