team members get their own iframe

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -3,5 +3,5 @@ layout: default
 ---
 
 <article class="team-page">
-    <iframe src="https://docs.google.com/document/d/1BrZ2IVHbpYK3_RyGBc3DO2NXXFVOZQlyH4soHKvVhm8/pub?embedded=true"></iframe>
+    <iframe src="{{page.cv_link}}?embedded=true" scrolling="no"></iframe>
 </article>
