add root relative url

--- a/style.scss
+++ b/style.scss
@@ -119,7 +119,7 @@ footer {
 }
 
 .landing {
-  background-image: url('images/IMG_5648.jpg');
+  background-image: url('/images/IMG_5648.jpg');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
