--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{% include header.html %}
 
 <article class="team-page">
     <iframe src="{{page.cv_link}}?embedded=true" scrolling="no"></iframe>
