--- a/style.scss
+++ b/style.scss
@@ -158,6 +158,10 @@ footer {
   margin-bottom: 20px;
   @include j-column();
 
+  @include tablet {
+    @include j-column(1/2, $cycle: 2);
+  }
+
   @include desktop {
     @include j-column(1/3, $cycle: 3);
   }
@@ -220,6 +224,10 @@ footer {
 .post {
   @include j-column();
   margin-bottom: 40px;
+
+  @include tablet {
+    @include j-column(1/2, $cycle: 2);
+  }
 
   @include desktop {
     @include j-column(1/3, $cycle: 3);
