some margin beneath the logo

--- a/style.scss
+++ b/style.scss
@@ -108,6 +108,8 @@ footer {
   color: $turquoise;
   font-size: 50px;
   letter-spacing: 2px;
+  margin-bottom: 20px;
+
   @include desktop {
     font-size: 70px;
   }
