stack contact info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,10 @@
                 {% include svg-icons.html %}
             </div>
             <div class="contact-info">
-                <span>Postadress: Hermelinvägen 77, 13433 Gustavsberg</span>
-                <span>Telefon: <a href="tel:0733347999">0733-34 79 99</a></span>
-                <span>E-post: <a href="mailto:kontakt@syson.se">kontakt@syson.se</a></span>
-                <span>Orgnr: 556934-1851</span>
+                <div>Postadress: Hermelinvägen 77, 13433 Gustavsberg</div>
+                <div>Telefon: <a href="tel:0733347999">0733-34 79 99</a></div>
+                <div>E-post: <a href="mailto:kontakt@syson.se">kontakt@syson.se</a></div>
+                <div>Orgnr: 556934-1851</div>
             </div>
         </div>
     </footer>
