--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article>
     <h1 class="center">{{ page.title }}</h1>
 
-    <p class="center">
+    <p class="center entry-date">
         {% include date.html %}
     </p>
 
