added blogpost about dubrovnik

--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -1,6 +1,6 @@
 <article class="post">
 
-    <div class="entry">
+    <div class="entry-preview">
         <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
         <p class="entry-date">{% include date.html %}</p>
         {% if post.featured_image %}
