--- a/style.scss
+++ b/style.scss
@@ -165,6 +165,10 @@ footer {
   margin-bottom: 40px;
   background-color: $clouds;
 
+  p {
+    margin-bottom: 20px;
+  }
+
   @include j-column();
 }
 
