--- a/style.scss
+++ b/style.scss
@@ -164,11 +164,12 @@ footer {
   padding: 20px;
   margin-bottom: 40px;
   background-color: $clouds;
-
   p {
-    margin-bottom: 20px;
+    margin-bottom: 12px;
   }
-
+  p.last {
+    margin-bottom: 0px;
+  }
   @include j-column();
 }
 
