--- a/style.scss
+++ b/style.scss
@@ -307,14 +307,37 @@ footer {
   }
 }
 
-.instagram-post {
-  margin-bottom: percentage($jeet-gutter/100);
+.instagram-posts {
+  @include j-column();
+}
 
-  @include j-column(1/2, $cycle: 2);
+/* clear fix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- masonry .grid-item ---- */
+
+.grid-sizer,
+.grid-item {
+  width: calc(50%);
 
   @include desktop {
-    @include j-column(1/3, $cycle: 3);
+      width: calc(33.333%);
   }
+}
+
+.grid-item {
+  float: left;
+  display: block;
+  max-width: 100%;
+}
+
+.grid-item img {
+  display: block;
+  max-width: 100%;
 }
 
 /* Wayra button from http://tympanus.net/Development/ButtonStylesInspiration/*/
