--- a/style.scss
+++ b/style.scss
@@ -186,6 +186,7 @@ footer {
   padding: 20px;
   margin-bottom: 40px;
   background-color: $clouds;
+  text-align: center;
   p {
     margin-bottom: 12px;
   }
