refactor; move header into default layout instead of in every page file. Created new salary calculator page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,8 @@
     <![endif]-->
     <div class="container">
         <div id="main" role="main">
-          {{ content }}
+        {% include header.html %}
+        {{ content }}
         </div>
     </div>
     <footer>
