fixed so ios should display numpad

--- a/_includes/salary_calculator.html
+++ b/_includes/salary_calculator.html
@@ -1,4 +1,4 @@
-<label>Timpris: <input id="hourlyRate" type="number" value="800" onchange="displaySalary(event.target.valueAsNumber)"/></label>
+<label>Timpris: <input id="hourlyRate" type="number" pattern="\d*" value="800" onchange="displaySalary(event.target.valueAsNumber)"/></label>
 <p>Lön: <span id="salary"></span></p>
 
 <script>
