styling of salary calc

--- a/style.scss
+++ b/style.scss
@@ -342,6 +342,13 @@ footer {
   max-width: 100%;
 }
 
+.salary-calculator {
+  input {
+    font-size: 34px;
+    width: 130px;
+  }
+}
+
 /* Wayra button from http://tympanus.net/Development/ButtonStylesInspiration/*/
 
 .button {
