--- a/_includes/salary-calculator.html
+++ b/_includes/salary-calculator.html
@@ -1,5 +1,5 @@
 <div class="salary-calculator">
-	<p>Vår lönemodell är simpel: du får 70% av det du drar in när du har uppdrag, 26 000 när du inte har ett uppdrag.</p>
+	<p>Vår lönemodell är simpel: du får 70% av det du drar in när du har ett uppdrag, 26 000 när du inte har ett uppdrag.</p>
 	<h1><label>Timpris: <input id="hourlyRate" type="number" pattern="\d*" value="800" onchange="displaySalary(event.target.valueAsNumber)"/></label></h1>
 	<h1>Lön: <span id="salary"></span> kr</h1>
 	<h1>Utan uppdrag: 26000 kr</h1>
