--- a/_includes/salary-calculator.html
+++ b/_includes/salary-calculator.html
@@ -13,7 +13,7 @@
 		}
 
 		function calculateSalary(hourlyRate) {
-			return ((250/12-(0/12))-(2,5))*(hourlyRate*8*0.7/1.3142)-2600*1.2426-0;
+			return (250/12-2.5)*((hourlyRate*8*0.7)/1.3142)-2600*1.2426;
 		}
 
 		displaySalary(hourlyRateInput.value);
