--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,14 +15,14 @@
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
-  <body>
+  <body class="site">
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div class="container">
-        <div id="main" role="main">
         {% include header.html %}
-        {{ content }}
+        <div id="main" role="main">
+            {{ content }}
         </div>
     </div>
     <footer>
