added AddThis for social media links - removed pepper

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,8 @@
     <footer>
         <div class="container">
             <div class="social-icons-container">
-                {% include svg-icons.html %}
+                <!-- Go to www.addthis.com/dashboard to customize your tools -->
+                <div class="addthis_inline_follow_toolbox"></div>
             </div>
             <div class="contact-info">
                 <div>Postadress: Hermelinvägen 77, 13433 Gustavsberg</div>
@@ -40,8 +41,7 @@
     </footer>
 
     {% include analytics.html %}
-    {% include pepper.html %}
-
-
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-585b876dff81b184"></script>
   </body>
 </html>
