--- a/_includes/salary-calculator.html
+++ b/_includes/salary-calculator.html
@@ -1,22 +1,26 @@
 <div class="salary-calculator">
-	<p>Vår lönemodell är enkel: du får 70% av det du drar in när du har ett uppdrag, 26000:- när du inte har ett uppdrag. I övrigt har vi 30 dagars semester och betalda konferenser. ⛷🏖</p>
+	<p>Vår lönemodell är enkel: du får 70% av det du drar in när du har ett uppdrag, 26000:- när du inte har ett uppdrag. I övrigt har vi 30 dagars semester och åker ofta på konferenser. ⛷🏖</p>
 	<br>
 	<h1><label>Timpris: <input id="hourlyRate" type="number" pattern="\d*" value="800" onchange="displaySalary(event.target.valueAsNumber)"/></label></h1>
 	<h1>Lön: <span id="salary"></span>:-</h1>
 	<h1>Utan uppdrag: 26000:-</h1>
 	<br>
-	<a href="{{ site.baseurl }}/lonemodell-forklarad/">Hur vi räknat</a>
+	<p>Månadslönen är uträknad med 160 timmar i månaden, 30 dagars semester och 2600 kr i pension. Givetvis kan man själv välja hur man vill fördela mellan lön, pension, eventuell tjänstebil med mera.</p>
 
 	<script>
 		var hourlyRateInput = document.getElementById('hourlyRate');
 		var salary = document.getElementById('salary');
 
 		window.displaySalary = function (hourlyRate) {
-			 salary.innerHTML = Math.floor(calculateSalary(hourlyRate))
+			 if(hourlyRate > 0) {
+			 	salary.innerHTML = Math.floor(calculateSalary(hourlyRate))
+			 } else {
+                 salary.innerHTML = '😑';
+			 }
 		}
 
 		function calculateSalary(hourlyRate) {
-			return (250/12-2.5)*((hourlyRate*8*0.7)/1.3142)-2600*1.2426;
+			return (((160-2.5*8)*hourlyRate*0.7)/1.3142)-2600*1.2426;
 		}
 
 		displaySalary(hourlyRateInput.value);
