--- a/_includes/salary-calculator.html
+++ b/_includes/salary-calculator.html
@@ -5,7 +5,7 @@
 	<h1>Lön: <span id="salary"></span>:-</h1>
 	<h1>Utan uppdrag: 26000:-</h1>
 	<br>
-	<p>Månadslönen är uträknad med 160 timmar i månaden, 30 dagars semester och 2600 kr i pension. Givetvis kan man själv välja hur man vill fördela mellan lön, pension, eventuell tjänstebil med mera.</p>
+	<p>Månadslönen är uträknad med 160 timmar i månaden och 2600 kr i pension. Givetvis kan man själv välja hur man vill fördela mellan lön, pension, eventuell tjänstebil med mera.</p>
 
 	<script>
 		var hourlyRateInput = document.getElementById('hourlyRate');
