--- a/style.scss
+++ b/style.scss
@@ -220,6 +220,25 @@ footer {
 
 }
 
+.salary-calculator {
+  input {
+    font-size: 34px;
+    width: 130px;
+  }
+}
+
+.show-all-btn-container {
+  @include j-column();
+
+  @include desktop {
+    @include j-column(1/3, 1/3);
+  }
+}
+
+.hidden {
+  display: none !important;
+}
+
 .instagram-posts {
   @include j-column();
   margin-bottom: 30px;
@@ -254,23 +273,16 @@ footer {
   max-width: 100%;
 }
 
-.salary-calculator {
-  input {
-    font-size: 34px;
-    width: 130px;
-  }
-}
-
 /* Wayra button from http://tympanus.net/Development/ButtonStylesInspiration/*/
 
 .button {
   min-width: 150px;
   display: block;
-  margin: 1em;
+  margin: 0 auto;
   padding: 1em 2em;
   border: none;
-  background: none;
-  color: $turquoise;
+  background: $turquoise;
+  color: $white;
   vertical-align: middle;
   position: relative;
   z-index: 1;
