full screen instagram-post viewing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,11 @@
             {{ content }}
         </div>
     </div>
+    <div class="instagram-posts">
+        <div class="grid">
+            <div class="grid-sizer"></div>
+        </div>
+    </div>
     <footer>
         <div class="container">
             <div class="social-icons-container">
