--- a/style.scss
+++ b/style.scss
@@ -28,6 +28,10 @@ h1 {
   font-size: 34px;
 }
 
+h2 {
+  font-size: 26px;
+}
+
 h4 {
     font-size: 25px;
     font-weight: bold;
@@ -220,9 +224,13 @@ footer {
 
 }
 
+.salary-teaser {
+  @include j-column();
+}
+
 .salary-calculator {
   input {
-    font-size: 34px;
+    font-size: 26px;
     width: 130px;
   }
 }
@@ -237,6 +245,10 @@ footer {
 
 .hidden {
   display: none !important;
+}
+
+.instagram-headline {
+  @include j-column();
 }
 
 .instagram-posts {
