--- a/style.scss
+++ b/style.scss
@@ -71,8 +71,12 @@ code {
   word-wrap: break-word;
 }
 
-.guttered-bottom {
+.guttered-bottom {
   margin-bottom: 20px;
+}
+
+.center {
+  text-align: center;
 }
 
 .site {
