fixat loves skit-feedback

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="global-header">
+<header>
     <div class="border"></div>
-    <div class="logo"><a href="{{ site.baseurl }}/">syson.</a></div>
+    <div class="logo">syson.</div>
 </header>
