--- a/style.scss
+++ b/style.scss
@@ -244,6 +244,8 @@ footer {
 }
 
 .salary-calculator {
+  margin-top: 20px;
+  margin-bottom: 20px;
   input {
     font-size: 26px;
     width: 130px;
