--- a/style.scss
+++ b/style.scss
@@ -307,27 +307,27 @@ footer {
   max-width: 100%;
 }
 
-//range slider
+//range slider, generated with http://danielstern.ca/range.css/#/
 input[type=range] {
   -webkit-appearance: none;
   width: 100%;
-  margin: 6.2px 0;
+  margin: 7.3px 0;
 }
 input[type=range]:focus {
   outline: none;
 }
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
-  height: 13.6px;
+  height: 11.4px;
   cursor: pointer;
-  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
   background: rgba(255, 255, 255, 0.78);
-  border-radius: 0px;
-  border: 1.3px solid #1abc9c;
+  border-radius: 25px;
+  border: 0.2px solid #1abc9c;
 }
 input[type=range]::-webkit-slider-thumb {
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  border: 0px solid rgba(0, 0, 0, 0);
+  box-shadow: 0px 0px 0.4px #000031, 0px 0px 0px #00004b;
+  border: 0px solid #00001e;
   height: 26px;
   width: 26px;
   border-radius: 15px;
@@ -341,16 +341,16 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 }
 input[type=range]::-moz-range-track {
   width: 100%;
-  height: 13.6px;
+  height: 11.4px;
   cursor: pointer;
-  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
   background: rgba(255, 255, 255, 0.78);
-  border-radius: 0px;
-  border: 1.3px solid #1abc9c;
+  border-radius: 25px;
+  border: 0.2px solid #1abc9c;
 }
 input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  border: 0px solid rgba(0, 0, 0, 0);
+  box-shadow: 0px 0px 0.4px #000031, 0px 0px 0px #00004b;
+  border: 0px solid #00001e;
   height: 26px;
   width: 26px;
   border-radius: 15px;
@@ -359,33 +359,33 @@ input[type=range]::-moz-range-thumb {
 }
 input[type=range]::-ms-track {
   width: 100%;
-  height: 13.6px;
+  height: 11.4px;
   cursor: pointer;
   background: transparent;
   border-color: transparent;
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: rgba(189, 189, 189, 0.78);
-  border: 1.3px solid #1abc9c;
-  border-radius: 0px;
-  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  background: rgba(242, 242, 242, 0.78);
+  border: 0.2px solid #1abc9c;
+  border-radius: 50px;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
 }
 input[type=range]::-ms-fill-upper {
   background: rgba(255, 255, 255, 0.78);
-  border: 1.3px solid #1abc9c;
-  border-radius: 0px;
-  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 0.2px solid #1abc9c;
+  border-radius: 50px;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
 }
 input[type=range]::-ms-thumb {
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  border: 0px solid rgba(0, 0, 0, 0);
+  box-shadow: 0px 0px 0.4px #000031, 0px 0px 0px #00004b;
+  border: 0px solid #00001e;
   height: 26px;
   width: 26px;
   border-radius: 15px;
   background: #1abc9c;
   cursor: pointer;
-  height: 13.6px;
+  height: 11.4px;
 }
 input[type=range]:focus::-ms-fill-lower {
   background: rgba(255, 255, 255, 0.78);
