--- a/style.scss
+++ b/style.scss
@@ -155,6 +155,7 @@ footer {
   font-size: 50px;
   letter-spacing: 2px;
   margin-bottom: 20px;
+  margin-top: 10px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
   @include desktop {
