--- a/style.scss
+++ b/style.scss
@@ -275,12 +275,20 @@ footer {
 
 .instagram-headline {
   @include j-column();
+  text-align: center;
 }
 
 .instagram-posts {
   @include j-center(1920px);
   width: 100%;
   margin-bottom: 30px;
+}
+
+#instagram-follow-button {
+    text-decoration: none;
+    .button {
+        width: 300px;
+    }
 }
 
 #hourlyRateInput {
