--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 <div class="addthis_inline_follow_toolbox"></div>
             </div>
             <div class="contact-info">
-                <div>Postadress: Hermelinvägen 77, 13433 Gustavsberg</div>
+                <div>Postadress: Rekordvägen 12  134 39 Gustavsberg</div>
                 <div>Telefon: <a href="tel:0733347999">0733-34 79 99</a></div>
                 <div>E-post: <a href="mailto:kontakt@syson.se">kontakt@syson.se</a></div>
                 <div>Orgnr: 556934-1851</div>
