--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,6 @@
 <header>
     <div class="border"></div>
-    <div class="logo">syson.</div>
+    <div class="logo-container">
+        <img class="logo" src="{{ site.baseurl }}/images/syson.png"/>
+    </div>
 </header>
