--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,7 +15,7 @@ $lightGray: #eee;
 $white: #fff;
 
 $green-sea: #16a085;
-$turquoise: #1abc9c;
+$turquoise: #59b89d;
 $emerald: #2ecc71;
 $clouds: #ecf0f1;
 $midnight-blue: #2c3e50;
